assets/css/style.css
/* Default configurations, border with 0 margin */
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

/* body background */
body {
    background-color: #d9dcd6;
}

header {
    padding: 20px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    background-color: #2a607c;
    color: #ffffff;
}

/* Company logo */
header h1 {
    display: inline-block;
    font-size: 48px;
}

header h1 .seo {
    color: #d9dcd6;
}

/* Right aligned navigation */
nav {
    padding-top: 15px;
    margin-right: 20px;
    float: right;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 20px;
}

nav ul {
    list-style-type: none;
}

nav ul li {
    display: inline-block;
    margin-left: 25px;
}

/* Default links and text */
a {
    color: #ffffff;
    text-decoration: none;
}

p {
    font-size: 16px;
}

/* Background image for main splash page */
#mainBackground {
    height: 800px;
    width: 100%;
    margin-bottom: 25px;
    object-fit: cover;
    position: center;
}

/* Used for embedded images */
.float-left {
    float: left;
    margin-right: 25px;
}

.float-right {
    float: right;
    margin-left: 25px;
}

/* Left aligned content */
.content {
    width: 75%;
    display: inline-block;
    margin-left: 20px;
}

/* right aligned aside */
.benefits {
    margin-right: 20px;
    padding: 20px;
    clear: both;
    float: right;
    width: 20%;
    height: 100%;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #2589bd;
}

/* Aside block formatting */
.benefits section {
    margin-bottom: 32px;
    color: #ffffff;
}

.benefits section h3 {
    margin-bottom: 10px;
    text-align: center;
}

.benefits section img {
    display: block;
    margin: 10px auto;
    max-width: 150px;
}

/* Content block formatting */
.content section {
    margin-bottom: 20px;
    padding: 50px;
    height: 300px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #0072bb;
    color: #ffffff;
}

.content section img {
    max-height: 200px;
}

.content section h2 {
    margin-bottom: 20px;
    font-size: 36px;
}

footer {
    padding: 30px;
    clear: both;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    text-align: center;
}

footer h2 {
    font-size: 20px;
}

